--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "vuex": "^3.5.1"
     },
     "dependencies": {
+        "leaflet": "^1.7.1",
         "leaflet-geosearch": "^3.0.6",
-        "vue-router": "^3.4.3"
+        "vue-router": "^3.4.3",
+        "vue2-leaflet": "^2.5.2"
     }
 }
